# xif

./: README.md  justfile  pyproject.toml
xif/: cli.py  config.py  main.py
